# guild-wars-2-auto-daily-rewards

./: .gitignore  README.md  accounts.example.yml  main.py  pyproject.toml
src/: cli.py  credentials.py  flow.py  inputs.py  resolution.py
