[tool.poetry]
name = "gw2-auto-login-rewards"
version = "0.1.0"
description = ""
authors = ["naylepsh <naylepsh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyAutoGUI = "^0.9.53"
PyYAML = "^6.0"
Pillow = "^8.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
